syntax = "proto3";

import "google/protobuf/wrappers.proto";

import "Protos/shared_definitions.proto";
import "Protos/common.proto";

option csharp_namespace = "Shared.Proto.Sensor";

service SensorGrpc {
  rpc GetAllSensors (common.GenericGetManyRequest) returns (GetAllSensorsResponse);
  rpc GetSensor (common.GenericGetRequest) returns (SensorDto);
  rpc GetSensorByName (GetSensorByNameRequest) returns (SensorDto);

  rpc AddSensor (CreateSensorRequest) returns (SensorDto);
  rpc UpdateSensor (UpdateSensorRequest) returns (SensorDto);
  rpc DeleteSensor (common.GenericDeleteRequest) returns (DeleteSensorResponse);
}

message GetAllSensorsResponse {
  repeated SensorDto Sensors = 1;
  common.PaginationMetaData MetaData = 2;
}

message CreateSensorRequest {
  string Name = 1;
  int32 DeviceId = 2;
  google.protobuf.StringValue DisplayName = 3;
  int32 TypeId = 4;

  // allow only owner of the device to add sensor to it
  google.protobuf.StringValue UserId = 8;
}

message UpdateSensorRequest {
  int32 Id = 1;

  google.protobuf.StringValue DisplayName = 3;
  int32 TypeId = 4;

  // allow only owner of the sensor to update it
  string UserId = 8;
}

message DeleteSensorResponse {
  int32 DeletedSensorId = 1;
  int32 ParentDeviceId = 2;
}

message GetSensorByNameRequest {
  string SensorName = 1;
  int32 DeviceId = 2;
  common.GetRequestParameters Parameters = 3;
}